k8s/stock-quote/quarkus-portfolio-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-stock-quote
  annotations:
    app.kubernetes.io/part-of: Quarkus-DayTrader
spec:
  selector:
    matchLabels:
      app: quarkus-stock-quote
  template:
    metadata:
      labels:
        app: quarkus-stock-quote
    spec:
      containers:
      - name: tradr
        image: quay.io/kameshsampath/quarkus-stock-quote
        imagePullPolicy: Always
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
