k8s/stock-quote/quarkus-portfolio-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: stock-quote
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: quarkus-stock-quote
    weight: 100
  wildcardPolicy: None
